--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <head>
+  <link> rel="stylesheet" href="css/nomalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+  <nav class="top-navigation">
+<div class="content"></div>
+</nav>
 </body>
