--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
   <nav class="top-navigation">
-<div class="content"></div>
+<div class="content">
+<img class="logo" src="images/karma-logo.svg" alt="Karma" width="26" style="
+margin-left: 14 px; height: 70px;"></div>
 </nav>
 </body>
