--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <head>
-  <link> rel="stylesheet" href="css/nomalize.css">
+  <link href="css/nomalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <nav class="top-navigation">
 <div class="content">
-<img class="logo" src="images/karma-logo.svg" alt="Karma" width="26" style="
-margin-left: 14 px; height: 70px;"></div>
+<ul class="links">
+  <li class="active">Meet Karma</li>
+  <li>How It Works</li>
+  <li>Store</li>
+  <li>Blog</li>
+  <li>Log in</li>
+</ul>
+<img class="logo" src="images/karma-logo.svg" alt="Karma" width="26">
+</div>
 </nav>
 </body>
