--- a/index.html
+++ b/index.html
@@ -17,4 +17,11 @@
 <img class="logo" src="images/karma-logo.svg" alt="Karma" width="26">
 </div>
 </nav>
+<section class="introduction">
+  <div class="content">
+<h1>Introducing Karma</h1>
+<h3>Bring WiFi with you, everywhere you go.</h3>
+<button>Learn More</button>
+  </div>
+</section>
 </body>
