--- a/index.html
+++ b/index.html
@@ -24,4 +24,20 @@
 <button>Learn More</button>
   </div>
 </section>
+<section class="cases"
+<div class="content">
+</div>
+<h2>Everyone needs a little Karma</h2>
+<ul class="devices">
+<li>
+  <img width="127" height="127" src="images/icon-devices.svg" alt="Internet for all devices image"
+</li>
+<li>
+  <img width="127" height="127" src="images/icon-coffee.svg" alt="Boost your productivity"
+</li>
+<li>
+  <img width="127" height="127" src="images/icon-refill.svg" alt="Pay As You Go"
+</li>
+</ul>
+</section>
 </body>
