--- a/index.html
+++ b/index.html
@@ -31,12 +31,21 @@
 <ul class="devices">
 <li>
   <img width="127" height="127" src="images/icon-devices.svg" alt="Internet for all devices image"
+<div class="caption">
+  <h3>Internet for all devices</h3>
+</div>
 </li>
 <li>
   <img width="127" height="127" src="images/icon-coffee.svg" alt="Boost your productivity"
+<div class="caption">
+  <h3>Boost your productivity</h3>
+</div>
 </li>
 <li>
   <img width="127" height="127" src="images/icon-refill.svg" alt="Pay As You Go"
+<div class="caption">
+  <h3>Pay as You Go</h3>
+</div>
 </li>
 </ul>
 </section>
