--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <link href="css/nomalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+<link rel="shortcut icon" type="image/x-icon"  href="favicon.ico">
 </head>
 <body>
   <nav class="top-navigation">
@@ -49,4 +51,24 @@
 </li>
 </ul>
 </section>
+<footer class="social">
+  <div class="content">
+    <hr>
+    <h5>Join us on</h5>
+    <ul class="icons">
+      <li>
+        <i class="fa fa-twitter"></i>
+      </li>
+      <li>
+        <i class="fa fa-facebook"></i>
+      </li>
+      <li>
+        <i class="fa fa-instagram"></i>
+      </li>
+    </ul>
+    <span class="copy">
+             &#169 Karma Mobility, Inc.
+                   </span>
+  </div>
+</footer>
 </body>
